Added Am's input to check solution

--- a/12/Day12.ipynb
+++ b/12/Day12.ipynb
@@ -98,12 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "id": "2f41ad38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open(\"input.txt\", \"r\")\n",
+    "f = open(\"input_A.txt\", \"r\")\n",
     "lines = f.read().splitlines()\n",
     "\n",
     "start = (0,0)\n",
@@ -200,17 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "id": "f3ca4192",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "528"
+       "423"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
